welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:5: error: '<-' expected but ')' found.
  for (k<1-to n-1){
                 ^indexOfMaxValue:16: error: illegal start of simple expression
} 
^